# trafic-share

./: .gitignore  API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  FINAL_SUMMARY.md  PROJECT_STATISTICS.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SETUP_GUIDE.md  SUMMARY_FINAL.txt  backend_qo'llanmasi.md  deploy.sh  docker-compose.yml  frontend_tavsifi.md
backend/: .env  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.sh  start.sh
backend/alembic/: README  env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  001_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  promo.py  webhook.py  websocket.py
backend/app/core/: cache.py  celery_app.py  config.py  database.py  jwt_manager.py  logging.py  security.py  telegram_auth.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/middleware/: __init__.py  auth.py  cors.py  logging.py  rate_limit.py
backend/app/models/: __init__.py  announcement.py  balance_history.py  base.py  daily_price.py  device_registry.py  filter_audit.py  login_history.py  notification.py  notification_log.py  pricing.py  promo_code.py  session.py  session_report.py  settings.py  support.py  support_request.py  user.py  (+6 more)
backend/scripts/: create_admin.py  init_db.py  test_api.sh
backend/tests/: conftest.py  test_auth.py  test_balance.py  test_filter_service.py  test_health.py  test_notification_service.py  test_pricing_service.py  test_reconciliation_service.py  test_sessions.py  test_withdraw.py
(+214 files in other folders)
