[
    project
]
name = "traffic-platform-backend"
version = "0.1.0"
description = "Full-stack traffic sharing platform backend with Telegram auth, pricing, payouts, analytics, and admin tooling"
authors = ["Cursor Assistant <dev@traffic-platform.local>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]~=0.115.0",
    "uvicorn[standard]~=0.30.0",
    "sqlalchemy[asyncio]~=2.0.32",
    "asyncpg~=0.29.0",
    "alembic~=1.13.2",
    "pydantic~=2.9.0",
    "pydantic-settings~=2.5.2",
    "python-jose[cryptography]~=3.3.0",
    "passlib[bcrypt]~=1.7.4",
    "httpx~=0.27.0",
    "redis~=5.0.8",
    "celery[redis]~=5.4.0",
    "python-telegram-bot~=21.6",
    "pyjwt~=2.9.0",
    "bcrypt~=4.1.2",
    "python-dotenv~=1.0.1",
    "firebase-admin~=6.5.0",
    "tenacity~=9.0.0",
    "fastapi-pagination~=0.12.27",
    "cryptography~=43.0.1",
    "orjson~=3.10.12",
    "structlog~=24.2.0",
    "prometheus-client~=0.20.0",
    "aiofiles~=24.1.0",
    "jinja2~=3.1.4"
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
py_version = 312

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[project.optional-dependencies]
test = [
    "pytest~=8.3.0",
    "pytest-asyncio~=0.24.0",
    "httpx~=0.27.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
